--- a/WMTippApp/Properties/Resources.resx
+++ b/WMTippApp/Properties/Resources.resx
@@ -118,9 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Title.Long" xml:space="preserve">
-    <value>Tippspiel Euro 2016 in Frankreich</value>
+    <value>Tippspiel WM in Russland</value>
   </data>
   <data name="Title.Short" xml:space="preserve">
-    <value>EURO 2016 Tippspiel</value>
+    <value>WM 2018 Tippspiel</value>
   </data>
 </root>
